Add import data from special CSV
